--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "chart.js": "^2.3.0",
+    "cron": "^1.1.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.10",
-    "node-cron": "^1.1.2",
     "node-fetch": "^1.6.1",
     "node-schedule": "^1.1.1"
   }
