--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "cron": "^1.1.0",
     "express": "^4.14.0",
+    "http": "0.0.0",
     "mongodb": "^2.2.10",
     "node-fetch": "^1.6.1",
     "node-schedule": "^1.1.1"
