--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "express": "^4.14.0",
     "http": "0.0.0",
     "mongodb": "^2.2.10",
-    "node-fetch": "^1.6.1",
-    "node-schedule": "^1.1.1"
+    "node-fetch": "^1.6.1"
   }
 }
